Remove warnings and exclude WIP tests from ci
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ before_script:
   - mix deps.compile
   - mix compile --warnings-as-errors
 
+script:
+	- mix test --exclude wip
+
 cache:
   directories:
     - _build
