--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,8 @@
 # Use an official Elixir runtime as a parent image
 FROM elixir:latest
 
+#ENV MIX_ENV prod
+
 RUN printenv
 
 RUN apt-get update \
@@ -10,19 +12,16 @@ RUN apt-get update \
  && apt-get install -y build-essential \
  && apt-get install -y inotify-tools
 
-
 # Create app directory and copy the Elixir projects into it
+
 RUN mkdir /app
 WORKDIR /app
 
-COPY mix.exs  /app
-COPY mix.lock  /app
+COPY .  .
 
 RUN mix local.rebar --force
 RUN mix local.hex --force
-RUN mix deps.get
 
-COPY . /app
+RUN mix do deps.get, deps.compile, compile
 
-# Get project deps
-CMD ["./entrypoint.sh"]
+CMD ["mix", 'phx.server"]
